--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,3 +23,20 @@
     font-weight: 400 900;
     font-style: normal;
 }
+
+.texto-principal {
+    font-family: 'Orbitron', sans-serif;
+}
+
+.color-acento-azul {
+    color: #1E90FF;
+}
+
+.color-acento-verde {
+    color: #39FF14;
+}
+
+body {
+    background-color: black;
+    font-family: 'Roboto';
+}
