--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,4 +1,4 @@
-<div class="bg-dark text-light py-1 fixed-bottom">
+<div class="bg-dark text-light py-1">
   <div class="container text-center">
     © 2025 Level-Up Gamer | Desarrollado por Felipe Duarte y Jeremy Parada | Todos los derechos reservados
   </div>
