--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,9 @@ body {
 
 /*Ojo que estoy sobreescribiendo una clase de bootstrap*/
 .card-img-top {
-  height: 200px;
-  object-fit: cover;
-  object-position: center;
+    border: 1px solid #dee2e6;
+    border-radius: 5px;
+    height: 200px;
+    object-fit: contain;
+    object-position: center;
 }
