--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -7,7 +7,7 @@
 
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 
-      <!-- Navegación izquierda -->
+      <!-- Lado izquierdo -->
       <div class="navbar-nav me-auto">
         <a class="nav-link color-acento-verde" href="index.html">Inicio</a>
         <a class="nav-link color-acento-verde" href="productos.html">Productos</a>
@@ -15,7 +15,7 @@
         <a class="nav-link color-acento-verde" href="comunidad.html">Comunidad</a>
       </div>
 
-      <!-- Navegación derecha (acciones de usuario) -->
+      <!-- Lado derecho -->
       <div class="navbar-nav ms-auto">
         <a class="nav-link color-acento-verde" href="carrito.html">Carrito</a>
         <a class="nav-link color-acento-verde" href="registro.html">Registro</a>
