--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ body {
     transform: translateY(-4px);
 }
 
-/* imagen mantiene borde y tamaño */
+/* fit imagen de card */
 .card-producto img {
     border: 1px solid #555;
     height: 200px;
@@ -117,4 +117,37 @@ body {
 #btnBuscarProducto:hover {
     background-color: #39FF14;
     color: #323232;
+}
+
+#formRegistro .form-label {
+    color: #D3D3D3;
+}
+
+.card-formulario {
+    background-color: #1a1a1a;
+    border: 1px solid #333;
+}
+
+.btn-registrarse {
+    background-color: #1e90ff;
+    border-color: #1e90ff;
+    color: #fff;
+}
+
+.btn-registrarse:hover {
+    background-color: #00bfff;
+    border-color: #00bfff;
+    color: #fff;
+}
+
+/* Tooltips visibles sobre fondo oscuro */
+.invalid-tooltip {
+    background-color: #ffffffcc; /* semi-transparente */
+    color: #000;
+    font-weight: 600;
+}
+.valid-tooltip {
+    background-color: #39FF14cc;
+    color: #000;
+    font-weight: 600;
 }
