--- a/partials/header.html
+++ b/partials/header.html
@@ -1,9 +1,9 @@
 <div class="navbar bg-body-tertiary bg-dark border-bottom border-body" data-bs-theme="dark">
   <div class="container-fluid justify-content-center">
     <a class="navbar-brand d-flex align-items-center" href="index.html">
-        Level-Up
+        <span class="texto-principal me-2">Level-Up</span>
         <img src="assets/img/logo.png" alt="Logo" height="50" class="d-inline-block align-text-top mx-2">
-        Gamer Store
+        <span class="texto-principal ms-2">Gamer Store</span>
     </a>
   </div>
 </div>
