--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -17,7 +17,10 @@
 
       <!-- Lado derecho -->
       <div class="navbar-nav ms-auto">
-        <a class="nav-link color-acento-verde" href="carrito.html">Carrito</a>
+        <a class="nav-link color-acento-verde carrito-contador" href="carrito.html">
+          🛒 Carrito
+          <span id="carritoContador" class="carrito-badge" style="display: none;">0</span>
+        </a>
         <a class="nav-link color-acento-verde" href="registro.html">Registro</a>
         <a class="nav-link color-acento-verde" href="perfil.html">Perfil</a>
       </div>
